@@ -8,34 +8,47 @@ Background:
 
 Scenario: Post Card
 
-* def card =
-"""
-{
-	"publisher" : "api_test",
-	"publisherVersion" : "1",
-	"process"  :"defaultProcess",
-	"processId" : "process3users",
-	"state": "messageState",
-	"recipient": {
-				"type":"UNION",
-				"recipients":[
-					{ "type": "USER", "identity":"tso1-operator"},
-					{ "type": "USER", "identity":"tso2-operator"},
-					{ "type": "USER", "identity":"admin"}
-				]
-		},
-	"severity" : "INFORMATION",
-	"startDate" : 1553186770681,
-	"summary" : {"key" : "defaultProcess.summary"},
-	"title" : {"key" : "defaultProcess.title"},
-	"data" : {"message":"a message for 3 users (tso1-operator, tso2-operator and admin)"}
-}
-"""
+
+    * def getCard = 
+    """
+    function() {
+
+      startDate = new Date().valueOf() + 2*60*60*1000;
+
+		var card = {
+				"publisher" : "api_test",
+				"publisherVersion" : "1",
+				"process"  :"defaultProcess",
+				"processId" : "process3users",
+				"state": "messageState",
+				"recipient": {
+							"type":"UNION",
+							"recipients":[
+								{ "type": "USER", "identity":"tso1-operator"},
+								{ "type": "USER", "identity":"tso2-operator"},
+								{ "type": "USER", "identity":"admin"}
+							]
+					},
+				"severity" : "INFORMATION",
+				"startDate" : startDate,
+				"summary" : {"key" : "defaultProcess.summary"},
+				"title" : {"key" : "defaultProcess.title"},
+				"data" : {"message":"a message for 3 users (tso1-operator, tso2-operator and admin)"}
+			}
+	return JSON.stringify(card);
+
+      }
+    """
+    * def card = call getCard 
+
+
+
 
 # Push card 
 Given url opfabPublishCardUrl + 'cards' 
 
 And request card  
+And header Content-Type = 'application/json'
 When method post
 Then status 201
 And match response.count == 1
