@@ -1,0 +1,19 @@
+{
+	"name":"api_test",
+	"version":"1",
+	"templates":["template"],
+	"csses":["style"],
+	"processes" : {
+		"defaultProcess" : {
+			"states":{
+				"messageState" : {
+					"details" : [{
+						"title" : { "key" : "defaultProcess.title"},
+						"templateName" : "template",
+						"styles" : [ "style" ]
+					}]
+				}
+			}
+		}
+	}
+}
