@@ -1,0 +1,4 @@
+h2{
+	color:#ff0000;
+	font-weight: bold;
+}
