@@ -1,0 +1,6 @@
+{
+	"defaultProcess":{
+		"title":"Message",
+		"summary":"Message reçu"
+	}
+}
