@@ -1,0 +1,5 @@
+
+
+<h2> Hello {{userContext.login}}, you received the following message </h2>
+
+{{card.data.message}}
