@@ -1,0 +1,5 @@
+
+
+<h2> Bonjour {{userContext.login}}, vous avez reçu le message suivant </h2>
+
+{{card.data.message}}
