@@ -1,0 +1,4 @@
+cd bundle_api_test 
+tar -czvf bundle_api_test.tar.gz config.json css/ template/ i18n/
+mv bundle_api_test.tar.gz ../
+cd ..
